<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CancButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_cancel_click"
            android:text="@string/CancelButton"
            tools:text="@string/CancelButton" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_save_click"
            android:text="@string/SaveButton"
            tools:text="@string/SaveButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleTextView"
        tools:text="@string/TitleTextView" />

    <EditText
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TitleEditText"
        tools:text="@string/TitleEditText" />

    <TextView
        android:id="@+id/Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ContentTextView"
        tools:text="@string/ContentTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ContentEditText"
            tools:text="@string/ContentEditText" />
    </ScrollView>
</LinearLayout>