<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/NewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_click_new"
            android:text="@string/NewButton"
            tools:text="@string/NewButton" />

        <Button
            android:id="@+id/EditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_click_edit"
            android:text="@string/EditButton"
            tools:text="@string/EditButton" />

        <Button
            android:id="@+id/DelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_click_delete"
            android:text="@string/DelButton"
            tools:text="@string/DelButton" />
    </LinearLayout>

    <ListView
        android:id="@+id/List"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>